--- a/Servicios/Servicios.Android/Servicios.Android.csproj
+++ b/Servicios/Servicios.Android/Servicios.Android.csproj
@@ -104,5 +104,8 @@
       <Name>Servicios</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Principal.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
