Se agregó imagen TestIconoApp.png para remplazar Button Text Imagen! en imagen para pantalla inicio

--- a/Servicios/Servicios.iOS/Servicios.iOS.csproj
+++ b/Servicios/Servicios.iOS/Servicios.iOS.csproj
@@ -150,4 +150,7 @@
   <ItemGroup>
     <BundleResource Include="Resources\Principal.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\TestIconoApp.png" />
+  </ItemGroup>
 </Project>
