Cambio usuario: 1234567 , cambio contraseña: prueba / cambio color text contáctanos.

--- a/Servicios/Servicios.Android/Servicios.Android.csproj
+++ b/Servicios/Servicios.Android/Servicios.Android.csproj
@@ -39,6 +39,7 @@
     <MandroidI18n />
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
     <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
+    <AndroidPackageFormat>apk</AndroidPackageFormat>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
