panel contratista / Falta asociar clave y contraseña a panel contratista.

--- a/Servicios/Servicios/Servicios.csproj
+++ b/Servicios/Servicios/Servicios.csproj
@@ -48,6 +48,9 @@
     <EmbeddedResource Update="Views\MenuTabs.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\PanelContratista.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\PerfilCliente.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
