--- a/Servicios/Servicios.iOS/Servicios.iOS.csproj
+++ b/Servicios/Servicios.iOS/Servicios.iOS.csproj
@@ -139,6 +139,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="XamForms.Enhanced.Calendar">
+      <Version>1.2.1</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
